# tinygl-cmake

./: CMakeLists.txt  README.md
TinyGL/: CHANGES  INSTALL  LIMITATIONS  Makefile  README  config.mk
TinyGL/example1/: Makefile  texobj.c
TinyGL/example2/: Makefile  mech.c
TinyGL/examples/: Makefile
TinyGL/include/GL/: gl.h
TinyGL/src/: Makefile  api.c  clip.c  get.c  glx.c  image_util.c  init.c  light.c  list.c  matrix.c  misc.c  opinfo.h  texture.c  triangle.c  vertex.c  zbuffer.c  zbuffer.h  zdither.c  zfeatures.h  zgl.h  zglx.h  zline.c  zline.h  zmath.c  ztriangle.c  ztriangle.h
gears-sdl2/: gears.c  main.c
shim/: tglshim.c  tglshim.h
